feat: add location page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6f4fe4157587f1474d78db59434a3e09"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>urban-hair-studio</title>
   </head>
